docs(all): modify api
