# gen/app_frontend_api/app/v1/app.pb.validate.go
@@ -1,0 +1,237 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: app_frontend_api/app/v1/app.proto
+
+package appv1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ConfigRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *ConfigRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ConfigRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in ConfigRequestMultiError, or
+// nil if none found.
+func (m *ConfigRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ConfigRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return ConfigRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// ConfigRequestMultiError is an error wrapping multiple validation errors
+// returned by ConfigRequest.ValidateAll() if the designated constraints
+// aren't met.
+type ConfigRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ConfigRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ConfigRequestMultiError) AllErrors() []error { return m }
+
+// ConfigRequestValidationError is the validation error returned by
+// ConfigRequest.Validate if the designated constraints aren't met.
+type ConfigRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ConfigRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ConfigRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ConfigRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ConfigRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ConfigRequestValidationError) ErrorName() string { return "ConfigRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ConfigRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sConfigRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ConfigRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ConfigRequestValidationError{}
+
+// Validate checks the field values on AppConfig with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *AppConfig) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AppConfig with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in AppConfigMultiError, or nil
+// if none found.
+func (m *AppConfig) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AppConfig) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Config
+
+	if len(errors) > 0 {
+		return AppConfigMultiError(errors)
+	}
+
+	return nil
+}
+
+// AppConfigMultiError is an error wrapping multiple validation errors returned
+// by AppConfig.ValidateAll() if the designated constraints aren't met.
+type AppConfigMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AppConfigMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AppConfigMultiError) AllErrors() []error { return m }
+
+// AppConfigValidationError is the validation error returned by
+// AppConfig.Validate if the designated constraints aren't met.
+type AppConfigValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AppConfigValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AppConfigValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AppConfigValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AppConfigValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AppConfigValidationError) ErrorName() string { return "AppConfigValidationError" }
+
+// Error satisfies the builtin error interface
+func (e AppConfigValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAppConfig.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AppConfigValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AppConfigValidationError{}
