# gen/app_frontend_api/app/v1/version.pb.validate.go
@@ -1,0 +1,273 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: app_frontend_api/app/v1/version.proto
+
+package appv1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on AppVersionPaginateData with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *AppVersionPaginateData) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AppVersionPaginateData with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// AppVersionPaginateDataMultiError, or nil if none found.
+func (m *AppVersionPaginateData) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AppVersionPaginateData) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Title
+
+	// no validation rules for Description
+
+	// no validation rules for Version
+
+	if all {
+		switch v := interface{}(m.GetPublishAt()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, AppVersionPaginateDataValidationError{
+					field:  "PublishAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, AppVersionPaginateDataValidationError{
+					field:  "PublishAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetPublishAt()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return AppVersionPaginateDataValidationError{
+				field:  "PublishAt",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return AppVersionPaginateDataMultiError(errors)
+	}
+
+	return nil
+}
+
+// AppVersionPaginateDataMultiError is an error wrapping multiple validation
+// errors returned by AppVersionPaginateData.ValidateAll() if the designated
+// constraints aren't met.
+type AppVersionPaginateDataMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AppVersionPaginateDataMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AppVersionPaginateDataMultiError) AllErrors() []error { return m }
+
+// AppVersionPaginateDataValidationError is the validation error returned by
+// AppVersionPaginateData.Validate if the designated constraints aren't met.
+type AppVersionPaginateDataValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AppVersionPaginateDataValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AppVersionPaginateDataValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AppVersionPaginateDataValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AppVersionPaginateDataValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AppVersionPaginateDataValidationError) ErrorName() string {
+	return "AppVersionPaginateDataValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e AppVersionPaginateDataValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAppVersionPaginateData.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AppVersionPaginateDataValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AppVersionPaginateDataValidationError{}
+
+// Validate checks the field values on LatestRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *LatestRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on LatestRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in LatestRequestMultiError, or
+// nil if none found.
+func (m *LatestRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *LatestRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return LatestRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// LatestRequestMultiError is an error wrapping multiple validation errors
+// returned by LatestRequest.ValidateAll() if the designated constraints
+// aren't met.
+type LatestRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m LatestRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m LatestRequestMultiError) AllErrors() []error { return m }
+
+// LatestRequestValidationError is the validation error returned by
+// LatestRequest.Validate if the designated constraints aren't met.
+type LatestRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e LatestRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e LatestRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e LatestRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e LatestRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e LatestRequestValidationError) ErrorName() string { return "LatestRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e LatestRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sLatestRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = LatestRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = LatestRequestValidationError{}
